fix the overflow issues with contributions and favourites in the side bar

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -190,6 +190,7 @@ p {
   position: absolute;
   top: 0;
   right: 0;
+  overflow: scroll;
   background-color: $primary-color;
 
   width: 250px;
@@ -204,6 +205,11 @@ p {
     .title {
       padding: 0.5rem 0;
       .list {
+        overflow: auto;
+        overflow-x: hidden;
+
+        max-height: 30vh;
+
         h3 {
           font-size: 1.1rem;
           padding-left: 0.5rem;
